@@ -242,6 +242,7 @@ class ContentHistoryViewlet(WorkflowHistoryViewlet):
         portal_diff = getToolByName(context, "portal_diff", None)
         can_diff = portal_diff is not None \
             and len(portal_diff.getDiffForPortalType(context.portal_type)) > 0
+        can_revert = _checkPermission('CMFEditions: Revert to previous versions', context)
 
         def morphVersionDataToHistoryFormat(vdata, version_id):
             meta = vdata["metadata"]["sys_metadata"]
@@ -255,7 +256,6 @@ class ContentHistoryViewlet(WorkflowHistoryViewlet):
                       version_id=version_id,
                       preview_url="%s/versions_history_form?version_id=%s#version_preview" %
                                   (context_url, version_id),
-                      revert_url="%s/revertversion" % context_url,
                       )
             if can_diff:
                 if version_id>0:
@@ -264,6 +264,10 @@ class ContentHistoryViewlet(WorkflowHistoryViewlet):
                 if not rt.isUpToDate(context, version_id):
                     info["diff_current_url"]=("%s/@@history?one=current&two=%s" %
                                               (context_url, version_id))
+            if can_revert:
+                info["revert_url"]="%s/revertversion" % context_url
+            else:
+                info["revert_url"]=None
             info.update(self.getUserInfo(userid))
             return info
 
